--- a/notebooks/basic_bioinformatics.ipynb
+++ b/notebooks/basic_bioinformatics.ipynb
@@ -16,21 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Edit Distance"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Practice: Phylogenetic Tree Construction (30 min)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Edit Distance: Hamming Distance\n",
+    "### 1. Edit Distance: Hamming Distance\n",
     "- 우리는 어떻게 서로 다른 두 생물학적 서열 (DNA/RNA/Protein Sequence)을 비교할 수 있을까요?\n",
     "- 지금부터는 단어를 문자열(string)이라 칭하겠습니다. 문자열은 순서가 있는 문자(character)의 나열을 의미합니다.\n",
     "- 간단한 다음의 두 영단어 문자열을 비교하는 예시를 생각해봅시다.\n",
@@ -68,7 +54,8 @@
     "    )\n",
     "\n",
     "\n",
-    "edit_distance_brute_force(\"strong\", \"stone\")"
+    "edit_distance_bf = edit_distance_brute_force(\"strong\", \"stone\")\n",
+    "print(\"Edit distance:\", edit_distance_bf)"
    ]
   },
   {
@@ -78,7 +65,10 @@
     "### Dynamic Programming\n",
     "- 위 예제에서는 각각의 문자열을 하나씩 비교하는 방법을 알아보았습니다\n",
     "- 하지만 `strong` 과 `stone` 을 비교할 때, 모든 문자를 하나씩 순차적으로 비교하는 것은 비효율적인 것 같습니다.\n",
-    "- 우리는 다음과 같이 표를 만들어 이전에 비교한 문자를 다시 비교할 수 있습니다. "
+    "- 우리는 다음과 같이 표를 만들어 이전에 비교한 문자를 다시 비교할 수 있습니다. \n",
+    "\n",
+    "![Edit distance compute](./assets/edit_distance_1.png)\n",
+    "![Edit distance trajectory](./assets/edit_distance_2.png)"
    ]
   },
   {
@@ -126,33 +116,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Python Library\n",
+    "- Python 에서는 `라이브러리` 를 이용하여 미리 구현된 코드를 간편하게 사용할 수 있습니다.\n",
+    "- 위 연산 과정의 코드와 유사한 역할을 하는 코드를 미리 구현하여 함수를 불러와서 사용할 수 있습니다. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from textdistance import hamming"
+    "from textdistance import hamming\n",
+    "edit_distance = hamming('stone', 'strong')\n",
+    "print(\"Edit distance:\", edit_distance)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hamming('stone', 'strong')"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
